ERR
Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com
Processing /home/work/dcvc/DCVC/src/cpp
  Preparing metadata (setup.py) ... error
  error: subprocess-exited-with-error
  
  × python setup.py egg_info did not run successfully.
  │ exit code: 1
  ╰─> [15 lines of output]
      /home/work/.local/lib/python3.10/site-packages/_distutils_hack/__init__.py:53: UserWarning: Reliance on distutils from stdlib is deprecated. Users must rely on setuptools to provide the distutils module. Avoid importing distutils or import setuptools first, and avoid setting SETUPTOOLS_USE_DISTUTILS=stdlib. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml
        warnings.warn(
      Traceback (most recent call last):
        File "<string>", line 2, in <module>
        File "<pip-setuptools-caller>", line 14, in <module>
        File "/home/work/.local/lib/python3.10/site-packages/setuptools/__init__.py", line 23, in <module>
          from . import logging, monkey
        File "/home/work/.local/lib/python3.10/site-packages/setuptools/logging.py", line 5, in <module>
          from . import monkey
        File "/home/work/.local/lib/python3.10/site-packages/setuptools/monkey.py", line 13, in <module>
          import distutils.filelist
        File "/home/work/dcvc/miniconda3/envs/dcvc_env/lib/python3.12/site-packages/distutils/__init__.py", line 1
          from setuptools._distutils import *\n
                                              ^
      SyntaxError: unexpected character after line continuation character
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: metadata-generation-failed

× Encountered error while generating package metadata.
╰─> See above for output.

note: This is an issue with the package mentioned above, not pip.
hint: See above for details.
Note: you may need to restart the kernel to use updated packages.
